kubernetes/apps/docs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "docs.k8s.local"
  rules:
    - backendRefs:
        - name: docs
          port: 80
